# belegscanner

./: .gitignore  .mcp.json  .tributary.yaml  CLAUDE.md  INSTALL.md  README.md  pyproject.toml  run_gui.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: INSTALL.md  PLAN_BETRAG_IM_DATEINAMEN.md  PLAN_EMAIL_DIRECT_CONNECT.md  PLAN_EMAIL_FEATURES.md  PLAN_EMAIL_PREFETCH_CACHE.md  PLAN_EMAIL_RECHNUNGEN.md  PLAN_GUI.md  PLAN_RC5.md
src/belegscanner/: __init__.py  app.py  cli.py  constants.py  email_view.py  email_viewmodel.py  log.py  viewmodel.py  window.py
src/belegscanner/services/: __init__.py  archive.py  config.py  credential.py  email_cache.py  email_pdf.py  imap.py  ocr.py  ollama.py  pdf.py  scanner.py  text.py  vendor.py
src/belegscanner/widgets/: __init__.py
tests/: __init__.py  conftest.py  test_archive.py  test_cli.py  test_config.py  test_constants.py  test_credential.py  test_email_cache.py  test_email_pdf.py  test_email_view_attachment_safety.py  test_email_view_auto_connect.py  test_email_viewmodel.py  test_imap.py  test_integration.py  test_log.py  test_ocr.py  test_ollama.py  test_pdf.py  test_race_conditions.py  test_scanner.py  test_text.py  test_vendor.py  test_viewmodel.py
