[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belegscanner"
version = "0.1.0"
description = "Scan receipts and archive them with OCR - GUI and CLI"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Klein und Partner KG"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dateutil>=2.9.0",
    "PyGObject>=3.46.0",
    "weasyprint>=60.0",
]

# Build-Abhängigkeiten für PyGObject (einmalig):
# sudo apt install libcairo2-dev libgirepository1.0-dev gir1.2-adw-1 gir1.2-gtk-4.0

[tool.hatch.build.targets.wheel]
packages = ["src/belegscanner"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/kup-org/belegscanner"
Issues = "https://github.com/kup-org/belegscanner/issues"

[project.gui-scripts]
belegscanner = "belegscanner.app:main"

[project.scripts]
scan-beleg = "belegscanner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "S", "T", "UP", "RUF"]
ignore = [
    "E402",   # Module level imports - required for GTK gi.require_version()
    "S603",   # subprocess calls — we validate inputs where needed
    "S607",   # partial executable paths — we use system tools (scanimage, convert, tesseract)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]  # assert and hardcoded temp paths are fine in tests
"src/belegscanner/email_view.py" = ["T201"]  # debug/timing prints (TODO: replace with logging)
